# nice-bike-roundtrips

./: .buildconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Tags.md
config/: settings.ini
src/: configuration.c  configuration.h  main.c
